# ServerClaw

./: .ansible-lint  .ansible-lint-ignore  .config-locations.yaml  .gitattributes  .gitignore  .gitleaks.toml  .local  .pre-commit-config.yaml  .repo-structure.yaml  .rsync-exclude  .woodpecker.yml  .yamllint  AGENTS.md  CERTIFICATE-MONITORING.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-STEPS-WS-0362.md  DEPLOYMENT_STATUS.md  LICENSE  Makefile  README.md  RELEASE.md  SEMAPHORE-SETUP-QUICK-START.md  VERSION  WS-0362-FINAL-SUMMARY.md  ansible.cfg  callback_plugins  changelog.md  controller_automation_toolkit.pyi  filter_plugins  mkdocs.yml  platform.py  pyproject.toml  pyrightconfig.json  pytest.ini  renovate.json  roles  script_bootstrap.pyi  workstreams.yaml
.githooks/: pre-push
.github/: SECURITY.md  pull_request_template.md
callback_plugins/: mutation_audit.py
collections/: requirements.yml
config/: activation-checklist.json  agent-policies.yaml  agent-tool-registry.json  ansible-execution-scopes.yaml  ansible-role-idempotency.yml  api-gateway-catalog.json  api-publication.json  build-cache-manifest.json  build-server.json  capability-contract-catalog.json  capacity-model.json  case-root-cause-categories.yaml  cert-sync-cron.yaml  certificate-catalog.json  changelog-redaction.yaml  check-runner-manifest.json  circuit-policies.yaml  command-catalog.json  control-plane-lanes.json  controller-local-secrets.json  correction-loops.json  data-catalog.json  dependency-graph.json  dependency-graph.yaml  dependency-wave-playbooks.yaml  diff-adapters.yaml  disaster-recovery-targets.json  environment-topology.json  ephemeral-capacity-pools.json  error-codes.yaml  event-taxonomy.yaml  execution-lanes.yaml  fault-scenarios.yaml  gate-bypass-waiver-catalog.json  goal-compiler-aliases.yaml  goal-compiler-rules.yaml  headscale-acl.hujson  health-probe-catalog.json  image-catalog.json  immutable-guest-replacement-catalog.json  (+54 more)
docker-dev/: KNOWN-DIFFERENCES.md  README.md
docs/: KEYCLOAK_PLANE_INTEGRATION.md  assistant-operator-guide.md  certificate-monitoring-setup.md  index.md  operator-tool-contract.md  proxmox-tool-topology.yaml.example  release-process.md  repository-map.md
filter_plugins/: service_topology.py
inventory/: build_server.yml  hosts.yml  (+2 more)
(+11267 files in other folders)
